# web_gemini_chat

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
data/: web_chat.db
frontend/: biome.json  index.html  package-lock.json  package.json  uno.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ChatInput.tsx  EmptyState.tsx  ErrorBanner.tsx  FilePreview.tsx  Header.tsx  LoadingIndicator.tsx  MessageBubble.tsx  ModelSelector.tsx  index.ts
frontend/src/hooks/: useWebSocket.ts
frontend/src/types/: index.ts
frontend/src/utils/: index.ts  storage.ts
src/: main.rs
src/handlers/: health.rs  mod.rs  upload.rs  websocket.rs
src/models/: gemini.rs  messages.rs  mod.rs
src/services/: embedding.rs  gemini.rs  memory.rs  mod.rs
