[package]
name = "web_chat"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-web = "4.12.1"
actix-web-actors = "4.3.0"
actix-cors = "0.7.0"
actix-multipart = "0.7.1"
actix-files = "0.6"
futures-util = "0.3.30"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
rusqlite = { version = "0.37.0", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
